# FIFA-World-Cup-Oracle

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.cache/: dataset.json
src/world_cup_oracle/: app.py  config.py  env.py  teams.py  timeutil.py
src/world_cup_oracle/data/: __init__.py  api_football.py  balldontlie.py  cache.py  loader.py  sample.py  the_odds_api.py  worldcup26.py
src/world_cup_oracle/models/: bracket.py  odds.py  ratings.py  scorers.py  simulation.py  standings.py  stats.py
src/world_cup_oracle/viz/: bracket.py  standings.py
tests/: conftest.py  test_app_smoke.py  test_balldontlie.py  test_bracket.py  test_cache.py  test_odds.py  test_ratings.py  test_scorers.py  test_simulation.py  test_standings.py  test_stats.py  test_the_odds_api.py  test_timeutil.py  test_worldcup26.py
