[project]
name = "world-cup-oracle"
version = "0.1.0"
description = ""
authors = [
    {name = "filipe.silva",email = "filipe.silva@free-now.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "world_cup_oracle", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
